# jn-assistent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  PROGRESS.md  README.md  SECURITY.md  arkitektur.md  conftest.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  release.yml
aiservice/: authentication.py  core_functions.py  openai_assistant.py  pyproject.toml
audio_streamer/: azure_storage.py  config.py  openai_transcriber.py  pyproject.toml  streamer.py  tray_icon.py
fe/: routes.ts
fe/components/: JNDownloadOverblikComponent.vue  JNNotatFeedback.vue  JNNotatOverblikComponent.vue  JNScaleFeedback.vue  JNStatusBar.vue
fe/stores/: JNJournalnotatStore.ts  JNNotatOverblik.ts  JNapi.ts  StorybookStore.ts
fe/types/: index.ts
fe/views/: BaseJn.vue  JNConfigView.vue  JNNotatOverblikView.vue  JNNotatView.vue
leverance/: pyproject.toml
leverance/common/: azure_helper.py
leverance/components/business/jn/: _test_jn_config_business_component.py  _test_jn_controller_business_component.py  _test_jn_model_business_component.py  _test_jn_notat_business_component.py  _test_jn_notat_feedback_business_component.py  _test_jn_prompts_business_component.py  _test_jn_samtale_business_component.py  _test_jn_text_processor_business_component.py  jn_config_business_component.py  jn_controller_business_component.py  jn_model_business_component.py  jn_notat_business_component.py  jn_notat_feedback_business_component.py  jn_prompts_business_component.py  jn_samtale_business_component.py  jn_storage_account_business_component.py  jn_text_processor_business_component.py
leverance/components/functions/: llm_helper.py  speaker_mapping_function.py
leverance/evaluation/: evaluate_notat.py
leverance/interaction/: jn_interaction_component.py  jn_website_interaction_component.py
leverance/prompt/: 0eca862c673d_alter_table_jn_prompts.py
tests/: test_audio_streamer.py  test_smoke.py
tests/end_to_end_and_load_test/: test_jn_end_to_end.py
tests/end_to_end_and_load_test/load_test/: base_jn_user.py  locustfile.py  parameters.py  utils.py
tests/end_to_end_and_load_test/load_test/clients/: audio_streamer_webservice_client.py  azure_openai_transcriber_client.py  azure_storage_account_client.py  base_client.py  frontend_webservice_client.py
tests/end_to_end_and_load_test/load_test/pipeline_scripts/: create_or_delete_queues.py  delete_blobs.py  download_coral_audio.py  generate_plots.py
