[tool.uv.workspace]
members = ["aiservice", "audio_streamer", "leverance"]

# Tell uv to resolve workspace members locally, not from PyPI
[tool.uv.sources]
aiservice = { workspace = true }
audio-streamer = { workspace = true }
leverance-jn = { workspace = true }


[tool.pdm.workspace]
members = ["aiservice", "audio_streamer", "leverance"]

# uv (used by PDM as resolver backend) needs its own workspace declaration
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "jn-assistent"
version = "0.1.0"
description = "Journalnotats-assistent workspace root"
requires-python = ">=3.11"
# Declare workspace members as dependencies so `pdm install` installs them all
dependencies = [
    "aiservice",
    "audio-streamer",
    "leverance-jn",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
    "numpy>=1.26",
    "ruff==0.6.9",
    "pre-commit>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests", "leverance"]
python_files = ["test_*.py", "_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    ".pdm-build",
    "fe/node_modules",
    "fe/dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
    "S101",  # assert used — fine in tests
    "N803",  # allow Danish parameter casing (e.g. AgentID, CallID)
    "N806",  # allow Danish variable casing
]

[tool.ruff.lint.per-file-ignores]
# Tests, test-doubles og fixtures: tillad mock-passwords, mock-SQL, random-data,
# samt mutable class-attributes (typiske testdata-konstanter).
"tests/**" = ["S", "N", "RUF012"]
"**/_test_*.py" = ["S", "N", "RUF012"]
"conftest.py" = ["S"]

# audio_streamer kalder interne Genesys-/tray-endpoints på localhost — her
# accepterer vi manglende timeout og deaktiveret TLS-verifikation.
"audio_streamer/**" = ["S113", "S501"]

# aiservice bruger `random` til at generere mock-IDs og dummy-tokens,
# ikke til kryptografiske formål.
"aiservice/**" = ["S311"]

# Business-komponenterne bygger interne SQL-strenge med hårdkodede
# tabel-/kolonne-navne (ingen bruger-input), og sender navnet på en secret
# (ikke selve værdien) som kwarg.
"leverance/components/business/**" = ["S106", "S608"]

# Alembic-/migrations-scripts har automatisk genererede hash-navne og
# kører import-logik efter en config-blok.
"leverance/prompt/*.py" = ["N999", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
