[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "audio-streamer"
version = "0.1.0"
description = "Audio streamer til Journalnotats assistenten"
requires-python = ">=3.11"
dependencies = [
    "pydub>=0.25",
    "requests>=2.31",
    "loguru>=0.7",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "azure-identity>=1.15",
    "azure-storage-blob>=12.19",
    "azure-storage-queue>=12.9",
    "openai>=1.0",
    "urllib3>=2.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "pyaudio>=0.2",
    "pyaudiowpatch>=0.2",
]

[project.scripts]
audio-streamer = "audio_streamer.streamer:main"

[tool.pdm.build]
package-dir = ".."
includes = ["audio_streamer/"]
